# htmx-class-template

rust/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js  webpack.config.js
rust/src/: db.rs  error.rs  index.css  index.ts  leptos_axum.rs  main.rs  utils.rs
